tests/baselines/reference/parserRegularExpression3.errors.txt
==== tests/cases/compiler/parserRegularExpression3.ts (1 errors) ====
    Foo(!/(\\?|&)adurl=/);
    ~~~
!!! parserRegularExpression3.ts(1,1): error TS2095: Cannot find name 'Foo'.